[package]
name = "grammer"
version = "0.0.2"
authors = [
    "Ana-Maria <mihalacheana.maria@yahoo.com>",
    "Eduard-Mihai Burtescu <edy.burt@gmail.com>"
]
edition = "2021"
repository = "https://github.com/LykenSol/grammer"
license = "MIT/Apache-2.0"
keywords = ["grammar"]
readme = "README.md"
description = "Grammar framework."

[dependencies]
indexmap = "1.9"
indexing = "0.4"
proc-macro2 = "1.0"
elsa = "1.7"
flat-token = "0"

[lib]
doctest = false
test = false
